ngx-chips disabled style and error message style

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "highcharts": "^7.0.0",
     "list-to-tree": "^2.2.3",
     "lodash": "^4.17.15",
+    "ngx-chips": "^2.1.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
